--- a/assets/scss/_dark-theme.scss
+++ b/assets/scss/_dark-theme.scss
@@ -121,6 +121,14 @@
             }
         }
 
+        img {
+            display: none;
+
+            &.dark-img {
+                display: block;
+            }
+        }
+
         h2 {
             color: $color-main-light;
         }
