main block is ready

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -12,7 +12,7 @@ $color-main-accent: #9dff73;
 $color-main-dark: #282828;
 $color-main-light: #e7e7e7;
 $color-main-link: #367df0;
-$color-main-link-12: #458cff;
+$color-main-link-12: rgba(69, 140, 255, 0.12);
 $color-buttons-primary-accent-default: #9dff73;
 $color-buttons-primary-accent-disabled: #568742;
 $color-buttons-primary-accent-hover-pressed: #adff89;
@@ -25,7 +25,7 @@ $color-buttons-light-secondary-hover-pressed: rgba(102, 110, 136, 4%);
 $color-buttons-dark-neutral-default: #e7e7e7;
 $color-buttons-dark-neutral-disabled: #7b7b7c;
 $color-buttons-dark-neutral-hover-pressed: #e1e1e1;
-$color-buttons-dark-secondary-default: #e7e7e7;
+$color-buttons-dark-secondary-default: rgba(231, 231, 231, 0.12);
 $color-buttons-dark-secondary-disabled: #e7e7e7;
 $color-buttons-dark-secondary-hover-pressed: #e7e7e7;
 $color-additional-gray-white: #ffffff;
